--- a/.github/workflows/5.1_message_information.yaml
+++ b/.github/workflows/5.1_message_information.yaml
@@ -9,6 +9,8 @@ jobs:
         run:  echo "::notice::ceci est une notice"
       - name:  info type warning
         run:  echo "::warning::ceci est un avertissement"
+      - name:  info type error
+        run:  echo "::error::une erreur est survenu"
 
       
 
