--- a/.github/workflows/5.4_job_artefact.yaml
+++ b/.github/workflows/5.4_job_artefact.yaml
@@ -20,6 +20,7 @@ jobs:
       - name:  "execute test"
         run: python -m pytest --html=report.html --self-contained-html
       - name:  save the report
+        if:  always()
         uses:  actions/upload-artifact@v3
         with:
           name:  pytest-report
